--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 /*-----------BODY----------*/
 body{
+    min-width: 500px;
     overflow-x: hidden;
     background-color: var(--grey);
 }
@@ -20,7 +21,7 @@ body{
     z-index: 2;
     width: 100%;
     height:10%;
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255,255,255,0.1);
     backdrop-filter: blur(30px);
     color: rgba(255,255,255,0.8);
@@ -41,7 +42,7 @@ body{
     background-color: var(--grey);
     width: 100%;
     height: 100vh;
-    background-image:url("../amcars-main/img/intro.jpg");
+    background-image:url("/img/intro.jpg");
     background-size: cover;
     background-position: center;
     clip-path: polygon(0 0, 100% 0, 100% 88%, 50% 100%, 50% 100%, 0 88%);
@@ -340,7 +341,7 @@ span.store{
 .brand{
     width: 100%;
     height: 50%;
-    background-color: rgb(210, 184, 184);
+    background-color: rgb(66, 66, 66);
    
 }
 
@@ -551,26 +552,65 @@ footer p.hh span{
         top:75%;
         right:70%;
     }
-
-    .nav-links{
+    .collapse{
         display: flex;
+        flex-direction: column;
+        background-color: transparent;
+        width: 100vw;
+        height: 300px;
+        justify-content: center;
+        background-color: rgba(0,0,0,.2);
+        backdrop-filter: blur(10px);
+        margin-left: -1500px;
+        transition: all 1.2s ease;
+        align-items: center;
+        z-index: 10;
+        text-align: center;
+    }
+    .nav-links{
+       /* display: flex;
         flex-direction: column;
         background-color: transparent;
         width: 100vw;
         height: 100vh;
         justify-content: center;
+        background-color: rgba(0,150,255,.2);
         backdrop-filter: blur(10px);
         margin-left: -1500px;
         transition: all 1.2s ease;
         align-items: center;
-        z-index: 1;
+        z-index: 10;*/
+        display: flex;
+        flex-direction: column;
+
     }
-    .nav-links li{
-        margin: 30px 0;
+    .test{
+        background-color: red;
+        display: flex;
+        flex-direction: column;
+    }
+    #mybtn1{
+        display: block;
+        position: absolute;
+        width: 21%;
+        top: 88%;
+        left: 40%;
+        text-align: center;
+    }
+    
+    #mybtn2{
+
+        display: block;
+        position: absolute;
+        width: 21%;
+        top: 75%;
+        left: 40%;
+        text-align: center;
     }
     .menu-btn{
         display: block;
-        z-index: 2;
+        position: fixed;
+        z-index: 100;
     }
     .menu-btn:hover{
         transform: scale(1.1);
@@ -595,12 +635,12 @@ footer p.hh span{
     gap: 0.4rem;
     width: 70vw;
     padding: 1.3rem;
-    height: 80vh;
+    height: 80%;
     position: fixed;
     z-index: 101;
     top: 10vh;
     left: 15vw;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid #ddd;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -683,11 +723,12 @@ footer p.hh span{
 
 .descrip-image{
     width: -webkit-fill-available;
-height: 200px;
+    height: 30vmin;
 }
 
 .description-placeholder{
     width:50%;
     margin-left: 5%;
     height: inherit;
+    background-color: red;
 }
