--- a/login.css
+++ b/login.css
@@ -20,20 +20,20 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, .3);;
     z-index: 600;
+    overflow: auto;
 }
 .modal-content{
     /*background-image:linear-gradient(rgba(0,0,0,.1),white);*/
-   /* background-color: #e6e6e6;*/
-   background-color: rgb(253, 253, 253);
-    width: 60vmin;
-    min-width: auto;
+    background-color: #e6e6e6;
+    width: 400px;
+    min-width: 300px;
+    min-height: 300px;
     margin: 10% auto;
-    height: 60vmin;
-    box-shadow: 9px 9px 3px rgb(97, 91, 91);
+    height: 350px;
+    box-shadow: 3px 3px 3px rgb(97, 91, 91);
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    border-radius: 2pc;
 }
 .formulaire{
     height: 100%;
@@ -45,7 +45,6 @@
     color: white;
     height: 15%;
     position: relative;
-    
 }
 .modal-header h1{
     color: rgb(0, 0, 0);
@@ -70,27 +69,24 @@
 }
 .modal-footer{
     padding: 15px 20px ;
-    font-variant: small-caps;
-    height: 30%;
+    height: 40px;
     position:relative;
 }
 .send{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    height: 8vmin;
-    width: 16vmin;
-    padding: 0px 30px;
-    border-radius: 5px;
+    transform: translate(-50%,-0%);
+    height: 40px;
+    width: 140px;
     background-color: rgb(255, 255, 255);
-    border: 2px solid black;
     transition: .6s;
-    box-shadow: 2px 2px 2px black;
+    text-align: center;
+    letter-spacing: 1px;
 }
 .send:hover{
-    background-color: rgb(0, 0, 0);
-    color: white;
+    background-color: black;
+    color:rgb(255, 255, 255) ;
 }
 
 .modal-body{
@@ -98,8 +94,8 @@
     justify-content: center;
     align-items: center;
     text-align: justify;
-    height: 50%;
- 
+    background-color: #e6e6e6;
+    height:65%;
 }
 .image{
     height: 5vmin;
@@ -176,10 +172,7 @@ button[type="submit"]{
 button[type="submit"]:hover{
     cursor: pointer;
 }
-.modal-footer{
-    display: flex;
-    justify-content: flex-end; /*bech nhotouha fi ekher el blasa*/
-}
+
 .modal-header{
     display: flex;
     justify-content:space-between; /*bech baadenhom*/
