--- a/signup.css
+++ b/signup.css
@@ -28,22 +28,23 @@
     background-color: rgba(0, 0, 0, .3);
     overflow-y:scroll;
     z-index: 500;
+    overflow: auto;
 }
 .modal-content2{
     
     /*background-image:linear-gradient(rgba(0,0,0,.1),white);*/
    /* background-color: #e6e6e6;*/
-   background-color: rgb(230, 230, 230);
-    width: 60vmin;
+   background-color: #e6e6e6;
+    width: 5vmin;
     min-width: 400px;
-    min-height: 500px;
-    margin: 10% auto;
-    height: 80vmin;
-    box-shadow: 9px 9px 3px rgb(97, 91, 91);
+    min-height: 600px;
+    margin: 4% auto;
+    height: 50vmin;
+    box-shadow: 3px 3px 3px rgb(97, 91, 91);
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    border-radius: 2pc;
+    /*border-radius: 2pc;*/
 }
 .formulaire2{
     height: 100%;
@@ -51,7 +52,8 @@
 
 }
 .modal-header2{
-    padding: 15px 20px ;
+    padding:0;
+    margin: 0;
     color: white;
     height: 15%;
     position: relative;
@@ -59,7 +61,7 @@
 }
 .modal-header2 h1{
     color: rgb(0, 0, 0);
-    font-size: 7vmin;
+    font-size: 40px;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -87,26 +89,23 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    height: 8vmin;
-    width: 16vmin;
-    padding: 0px 30px;
-    border-radius: 5px;
+    transform: translate(-50%,-0%);
+    height: 40px;
+    width: 140px;
     background-color: rgb(255, 255, 255);
-    border: 2px solid black;
     transition: .6s;
-    box-shadow: 2px 2px 2px black;
+    text-align: center;
+    letter-spacing: 1px;
 }
 .send2:hover{
-    background-color: rgb(0, 0, 0);
-    border: 2px solid white;
-    color: white;
+    background-color: black;
+    color:rgb(255, 255, 255) ;
+
+
 }
 .modal-footer2{
     padding: 15px 20px ;
-    font-variant: small-caps;
-    height: 15%;
-    background-color: black;
+    height: 60px;
     position:relative;
 }
 
@@ -115,17 +114,19 @@
     justify-content: center;
     align-items: center;
     text-align: justify;
-    height: 70%;
+    background-color: #e6e6e6;
+    height: fit-content;
 }
 .image2{
-    height: 5vmin;
-    width: 5vmin;
-    
+    height: 35px;
+    width: 35px;
+
 }
 .modal-body2 ul{
     width: 80%;
-    padding: 10px 0;
-    
+    height: fit-content;
+    padding:0;
+    background-color: #e6e6e6;
 }
 .modal-body2 ul li {
     width: 100%;
@@ -141,9 +142,10 @@
     display: flex;
 }
 .eye2{
-    height: 45px;
-    width: 45px;
+    height: 25px;
+    width: 25px;
     padding: 0;
+    margin-top: 10px;
     transition: .2s;
     
 
@@ -192,10 +194,7 @@ button[type="submit"]{
 button[type="submit"]:hover{
     cursor: pointer;
 }
-.modal-footer2{
-    display: flex;
-    justify-content: flex-end; /*bech nhotouha fi ekher el blasa*/
-}
+
 .modal-header2{
     display: flex;
     justify-content:space-between; /*bech baadenhom*/
