--- a/style.css
+++ b/style.css
@@ -15,6 +15,23 @@
 /**************/ 
 
 /*-----------BODY----------*/
+#gototop{
+    position :fixed;
+    bottom: 20px;
+    right: 20px ;
+    z-index: 50;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: none;
+}
+#gototop span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
 body{
     overflow-x: hidden;
     background-color: var(--grey);
@@ -637,6 +654,12 @@ font-family: 'Quicksand', sans-serif;
 {
 
     background: #444444;
+}
+.statustxt{
+    font-size: 20px;
+    color: #029930;
+    font-weight: 900;
+    display:none;
 }
 
 /* responsive contact us */
